syntax = "proto3";

package fs;
option go_package = "proto/fs;fs";

service FileSystem {
  rpc WriteFile(WriteRequest) returns (WriteResponse);
  rpc ReadFile(ReadRequest) returns (ReadResponse);
  rpc DeleteFile(DeleteRequest) returns (DeleteResponse);
  rpc ListFiles(ListRequest) returns (ListResponse);
}

message WriteRequest {
  string filename = 1;
  bytes data = 2;
}

message WriteResponse {
  string message = 1;
}

message ReadRequest {
  string filename = 1;
}

message ReadResponse {
  bytes data = 1;
}

message DeleteRequest {
  string filename = 1;
}

message DeleteResponse {
  string message = 1;
}

message ListRequest {}

message ListResponse {
  repeated string files = 1;
}
